# ZokuZoku-Edge

./: .eslintrc.json  .gitignore  COMPARISON.md  Cargo.toml  MIGRATION.md  OVERVIEW.md  README.md  SUMMARY.md  package.json
.github/workflows/: build-and-release.yml  builder.yml
src/: commands.rs  config.rs  core.rs  data_manager.rs  downloader.rs  ipc.rs  lib.rs  main.rs  sqlite.rs  utils.rs
